# ft_irc

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  tester.py
.github/workflows/: testing.yml
src/: Channel.cpp  Channel.hpp  Client.cpp  Client.hpp  Logger.cpp  Logger.hpp  Server.cpp  Server.hpp  handleInput.cpp  inputHandle.cpp  irc.hpp  main.cpp  utils.cpp  validation.cpp
src/channel/: Channel.cpp  Channel.hpp  channelManager.cpp
src/client/: Client.cpp  Client.hpp
src/commands/: commands.hpp  invite.cpp  join.cpp  kick.cpp  mode.cpp  nick.cpp  part.cpp  pass.cpp  ping.cpp  privmsg.cpp  topic.cpp  user.cpp  who.cpp  whois.cpp
src/common/: constants.hpp  socket_utils.cpp  socket_utils.hpp
src/logger/: Logger.cpp  Logger.hpp
src/parser/: parser.cpp
src/server/: Server.cpp  Server.hpp
src/utils/: responsePrefix.cpp  split.cpp  strToLowercase.cpp  utils.cpp  validateChannelName.cpp  validateClientName.cpp
src/validation/: validation.cpp  validation.hpp
tests/: channelname_test.cc  command_test.cc  logger_test.cc  password_test.cc  port_test.cc  username_test.cc
